# protei

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h
client/: main.cc
client/src/: client_socket.h  tcp_client_socket.h  udp_client_socket.h
client_side/: main.cc
client_side/src/: args_parser.h  protocol.h
client_side/src/sockets/: client_socket.h  tcp_client_socket.cc  tcp_client_socket.h  udp_client_socket.cc  udp_client_socket.h
include/protei/network/: socket.hpp  socket_error.hpp
server_side/: main.cc
server_side/src/: event_loop.cc  event_loop.h  server.cc  server.h
server_side/src/handlers/: request_handler.h  sum_request_handler.cc  sum_request_handler.h
